result-analysis ตรวจสอบภาษี

--- a/workspace/ims-client/src/app/buckwaframework/project/pages/result-analysis/result-analysis.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/result-analysis/result-analysis.component.html
@@ -94,32 +94,24 @@
             </div>
         </div>
         <div class="ui attached segment">
-            <table id="table1" class="ui small celled table striped selectable">
+            <table id="table1" class="ui small celled table striped selectable nowrap" style="width:100%">
                 <thead>
-                    <tr style="text-align: center;">
-                        <th>รายการ</th>
-                        <th class="sum">ข้อมูลแบบภาษี ภส. 03-07</th>
-                        <th class="sum">แบบงบเดือน ภส. 07-04</th>
-                        <th class="sum">ผลต่าง</th>
+                    <tr>
+                        <th class="text-center">รายการ</th>
+                        <th class="text-center">ข้อมูลแบบภาษี ภส. 03-07</th>
+                        <th class="text-center">แบบงบเดือน ภส. 07-04</th>
+                        <th class="text-center">ผลต่าง</th>
                     </tr>
                 </thead>
                 <tfoot>
                     <tr>
-                        <th>รวม</th>
+                        <th><b>รวม</b></th>
                         <th></th>
                         <th></th>
                         <th></th>
                     </tr>
                 </tfoot>
             </table>
-            <div class="ui right aligned grid">
-                <div class="sixteen wide column">
-                    <button class="ui mini primary button">
-                        <i class="file text outline icon"></i>
-                        กระดาษทำการ
-                    </button>
-                </div>
-            </div>
         </div>
 
         <div class="ui clearing top attached header segment">
@@ -132,32 +124,24 @@
             </div>
         </div>
         <div class="ui attached segment">
-            <table id="table2" class="ui small celled table striped selectable">
+            <table id="table2" class="ui small celled table striped selectable  nowrap" style="width:100%">
                 <thead>
                     <tr style="text-align: center;">
                         <th>รายการ</th>
-                        <th class="sum">แบบชำระภาษี ภส. 03-07</th>
-                        <th class="sum">แบบแจ้งฯ ภส. 02-01</th>
-                        <th class="sum">ผลต่าง</th>
+                        <th class="text-center">แบบชำระภาษี ภส. 03-07</th>
+                        <th class="text-center">แบบแจ้งฯ ภส. 02-01</th>
+                        <th class="text-center">ผลต่าง</th>
                     </tr>
                 </thead>
                 <tfoot>
                     <tr>
-                        <th>รวม</th>
+                        <th><b>รวม</b></th>
                         <th></th>
                         <th></th>
                         <th></th>
                     </tr>
                 </tfoot>
             </table>
-            <div class="ui right aligned grid">
-                <div class="sixteen wide column">
-                    <button class="ui mini primary button">
-                        <i class="file text outline icon"></i>
-                        กระดาษทำการ
-                    </button>
-                </div>
-            </div>
         </div>
 
         <div class="ui clearing top attached header segment">
@@ -170,32 +154,24 @@
             </div>
         </div>
         <div class="ui attached segment">
-            <table id="table3" class="ui small celled table striped selectable">
+            <table id="table3" class="ui small celled table striped selectable nowrap" style="width:100%">
                 <thead>
                     <tr style="text-align: center;">
                         <th>รายการ</th>
-                        <th class="sum">ปริมาณ ภส. 03-07</th>
-                        <th class="sum">ราคาขายปลีกแนะนำ</th>
-                        <th class="sum">ผลต่าง</th>
+                        <th class="text-center">ปริมาณ ภส. 03-07</th>
+                        <th class="text-center">ราคาขายปลีกแนะนำ</th>
+                        <th class="text-center">ผลต่าง</th>
                     </tr>
                 </thead>
                 <tfoot>
                     <tr>
-                        <th>รวม</th>
+                        <th><b>รวม</b></th>
                         <th></th>
                         <th></th>
                         <th></th>
                     </tr>
                 </tfoot>
             </table>
-            <div class="ui right aligned grid">
-                <div class="sixteen wide column">
-                    <button class="ui mini primary button">
-                        <i class="file text outline icon"></i>
-                        กระดาษทำการ
-                    </button>
-                </div>
-            </div>
         </div>
 
         <div class="ui clearing top attached header segment">
@@ -208,32 +184,24 @@
             </div>
         </div>
         <div class="ui attached segment">
-            <table id="table4" class="ui small celled table striped selectable">
+            <table id="table4" class="ui small celled table striped selectable  nowrap" style="width:100%">
                 <thead>
                     <tr style="text-align: center;">
-                        <th>รายการ</th>
-                        <th class="sum">ภส. 03-07</th>
-                        <th class="sum">อัตราภาษีที่อยู่ในระบบ</th>
-                        <th class="sum">ผลต่าง</th>
+                        <th class="text-center">รายการ</th>
+                        <th class="text-center">ภส. 03-07</th>
+                        <th class="text-center">อัตราภาษีที่อยู่ในระบบ</th>
+                        <th class="text-center">ผลต่าง</th>
                     </tr>
                 </thead>
                 <tfoot>
                     <tr>
-                        <th>รวม</th>
+                        <th><b>รวม</b></th>
                         <th></th>
                         <th></th>
                         <th></th>
                     </tr>
                 </tfoot>
-            </table>
-            <div class="ui right aligned grid">
-                <div class="sixteen wide column">
-                    <button class="ui mini primary button">
-                        <i class="file text outline icon"></i>
-                        กระดาษทำการ
-                    </button>
-                </div>
-            </div>
+            </table>            
         </div>
 
         <div class="ui clearing top attached header segment">
@@ -246,191 +214,25 @@
             </div>
         </div>
         <div class="ui attached segment">
-            <table id="table5" class="ui small celled table striped selectable">
+            <table id="table5" class="ui small celled table striped selectable  nowrap" style="width:100%">
                 <thead>
-                    <tr style="text-align: center;">
-                        <th>รายการ</th>
-                        <th class="sum">ภาษีที่ได้จากการคำนวณ</th>
-                        <th class="sum">ภาษีที่ได้จาก ภส.03-07</th>
-                        <th class="sum">ผลต่าง</th>
+                    <tr>
+                        <th class="text-center">รายการ</th>
+                        <th class="text-center">ภาษีที่ได้จากการคำนวณ</th>
+                        <th class="text-center">ภาษีที่ได้จาก ภส.03-07</th>
+                        <th class="text-center">ผลต่าง</th>
                     </tr>
                 </thead>
                 <tfoot>
                     <tr>
-                        <th>รวม</th>
+                        <th><b>รวม</b></th>
                         <th></th>
                         <th></th>
                         <th></th>
                     </tr>
                 </tfoot>
             </table>
-            <div class="ui right aligned grid">
-                <div class="sixteen wide column">
-                    <button class="ui mini primary button">
-                        <i class="file text outline icon"></i>
-                        กระดาษทำการ
-                    </button>
-                </div>
-            </div>
-        </div>
-
-        <div class="ui clearing top attached header segment">
-            <div class="ui grid">
-                <div class="two column row">
-                    <div class="column">
-                        ผลการวิเคราะห์การชำระภาษีภายในเวลาที่กฏหมายกำหนด
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="ui attached segment">
-            <table id="table6" class="ui small celled table striped selectable">
-                <thead>
-                    <tr style="text-align: center;">
-                        <th>เดือน</th>
-                        <th>กำหนดชำระภาษีตาม กม.</th>
-                        <th>ข้อมูลจาก ภส. 03 - 07</th>
-                        <th>ผลการตรวจสอบ</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr style="text-align: center;">
-                        <td style="text-align: left;">พ.ค. 2560</td>
-                        <td>15 มิ.ย. 2560</td>
-                        <td>14 มิ.ย. 2560</td>
-                        <td>
-                            <span class="ui green horizontal label">ชำระภายในเวลา</span>
-                        </td>
-                    </tr>
-                    <tr style="text-align: center;">
-                        <td style="text-align: left;">มิ.ย. 2560</td>
-                        <td>15 มิ.ย. 2560</td>
-                        <td>19 มิ.ย. 2560</td>
-                        <td>
-                            <span class="ui red horizontal label">ชำระเกินเวลา</span>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-            <div class="ui right aligned grid">
-                <div class="sixteen wide column">
-                    <button class="ui mini primary button">
-                        <i class="file text outline icon"></i>
-                        กระดาษทำการ
-                    </button>
-                </div>
-            </div>
-        </div>
-
-        <div class="ui clearing top attached header segment">
-            <div class="ui grid">
-                <div class="two column row">
-                    <div class="column">
-                        วิเคราะห์รายได้จากระบบ BI : ข้อมูลปีเดียวกันเปรียบเทียบข้อมูลในเดือนก่อนหน้า
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="ui attached segment">
-            <table id="table6" class="ui small celled table striped selectable">
-                <thead>
-                    <tr style="text-align: center;">
-                        <th>เดือน</th>
-                        <th>รายได้ปี 2560</th>
-                        <th>ผลต่าง</th>
-                        <th>ผลต่าง (ร้อยละ)</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr style="text-align: right;">
-                        <td style="text-align: left;">พ.ค 2560</td>
-                        <td>24,000.00</td>
-                        <td>-</td>
-                        <td>0.00</td>
-                    </tr>
-                    <tr style="text-align: right;">
-                        <td style="text-align: left;">มิ.ย. 2560</td>
-                        <td>23,520.00</td>
-                        <td>-480.00</td>
-                        <td>-2.00</td>
-                    </tr>
-                    <tr style="text-align: right;">
-                        <td style="text-align: left;">ก.ค. 2560</td>
-                        <td>23,000.00</td>
-                        <td>-520.00</td>
-                        <td>-2.21</td>
-                    </tr>
-                    <tr style="text-align: right;">
-                        <td style="text-align: left;">ส.ค. 2560</td>
-                        <td>22,000.00</td>
-                        <td>-1000.00</td>
-                        <td>-4.35</td>
-                    </tr>
-                </tbody>
-            </table>
-            <div class="ui right aligned grid">
-                <div class="sixteen wide column">
-                    <button class="ui mini primary button">
-                        <i class="file text outline icon"></i>
-                        กระดาษทำการ
-                    </button>
-                </div>
-            </div>
-        </div>
-
-        <div class="ui clearing top attached header segment">
-            <div class="ui grid">
-                <div class="two column row">
-                    <div class="column">
-                        วิเคราะห์รายได้จากระบบ BI : ข้อมูลในเดือนเดียวกันกับปีก่อนหน้า
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="ui attached segment">
-            <table id="table6" class="ui small celled table striped selectable">
-                <thead>
-                    <tr style="text-align: center;">
-                        <th>เดือน</th>
-                        <th>รายได้ปี 2559</th>
-                        <th>รายได้ปี 2560</th>
-                        <th>ผลต่าง (บาท)</th>
-                        <th>ผลต่าง (ร้อยละ)</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr style="text-align: right;">
-                        <td style="text-align: left;">พ.ค 2560</td>
-                        <td>25,000.00</td>
-                        <td>23,520.00</td>
-                        <td>-1,480.00</td>
-                        <td>-5.92</td>
-                    </tr>
-                    <tr style="text-align: right;">
-                        <td style="text-align: left;">มิ.ย. 2560</td>
-                        <td>25,200.00</td>
-                        <td>23,000.00</td>
-                        <td>-2,200.00</td>
-                        <td>-8.73</td>
-                    </tr>
-                    <tr style="text-align: right;">
-                        <td style="text-align: left;">ก.ค. 2560</td>
-                        <td>24,000.00</td>
-                        <td>22,000.00</td>
-                        <td>-2,000.00</td>
-                        <td>-8.33</td>
-                    </tr>
-                </tbody>
-            </table>
-            <div class="ui right aligned grid">
-                <div class="sixteen wide column">
-                    <button class="ui mini primary button">
-                        <i class="file text outline icon"></i>
-                        กระดาษทำการ
-                    </button>
-                </div>
-            </div>
-        </div>
+        </div>                                   
 
         <div class="ui attached segment">
             <div class="ui form">
